remove code from save class